<resources>
    <string name="retry">"\u25B3 "Retry </string>
    <string name="upload">"\u25B3"</string>
    <!--  Action Mode Menu Items -->
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>

    <string name="title_activity_celgram_create_group">Create New Group</string>


    <string name="app_name">earnchat</string>
    <string name="FACEBOOK_APP_ID">200008144049035</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">2f0ab01e238f6425b8de718eca34eef9</string>


    //-----------------Drawer---------------------


    <!-- Nav Drawer Menu Items -->

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->

    <!-- Content Description -->


    //---------------Congo Screen------------


    ///-----------------API's Refference ------------------------------


    //================================================


    //-------------------Profile Menu Items----------------------------
    //----Date OF Birth---------

    //----Gender---------

    //----Education---------

    //----Status---------

    //----Home Town---------

    //----Living IN---------

    //----State---------

    //----Region---------
    //----------Native Language--------

    //---------House Hold----

    //---------Family Income----

    //---------Profession----

    /* Cnergize main screen strings */

    //---Mobile bill mode-----

    //Top Up

    //Operator

    //DTH Operator


    //Data Card Operators


    //gcm strings
    <!--<string name="gcm_defaultSenderId">gcm_defaultSenderId</string>-->

    //fcm


    <string name="magic_chat">Magic Chat</string>
    <string name="name_chat">Name this chat</string>
    <string name="contact_name">Search your Contacts on Chikoop</string>
    <string name="phonebook">Search My Phonebook</string>
    <string name="explore">Explore People Around</string>
    <string name="celgram">Celgram</string>
    <string name="new_here">Looks Like You are New here !</string>
    <string name="start_chatting">Click here to Start Chatting</string>
    <string name="Chat">New Chat</string>
    <string name="title_activity_intro">intro</string>
    <string name="frag1_text">Chat assistant for AdMyBrand ventures</string>
    <string name="frag2_text">Connect with us through <b>8Chat</b> from any of our Ventures on one click</string>
    <string name="frag3_text">Building co-operation among <b>Media owners, Advertisers</b></string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
