<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--  Toolbar ActionMode Menu Items  -->
    <!--<item
        android:id="@+id/action_info"
        android:icon="@mipmap/info"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_reply"
        android:orderInCategory="100"
        android:title="@string/reply"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy"
        android:orderInCategory="100"
        android:title="@string/copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward"
        android:orderInCategory="100"
        android:title="@string/forward"
        app:showAsAction="always" />
</menu>