<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_theme_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/BottomButton"
        android:background="@color/seperator_color"
        android:weightSum="100">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="START CHATTING"
            android:textColor="@color/textColor"
            android:layout_marginRight="1dp"
            android:background="@color/ThemeColor"
            android:layout_weight="50"
            android:id="@+id/button_start_chatting"/>

    </LinearLayout>


    <include layout="@layout/custome_actionbar7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/include" />



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_above="@+id/BottomButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >





            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:id="@+id/iv_magic_dp"
                android:src="@drawable/group_icon"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_magic_dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/et_name_chat"
            android:textColorHint="@android:color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/name_chat"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textColor="@color/textColorBlack"

            android:background="@android:color/transparent"/>
            <View
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/et_name_chat"
                android:background="#f0f0f0"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_name_chat"
                android:layout_marginTop="55dp"
                android:id="@+id/ll_contact"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:src="@drawable/icon_add"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_search_contact"
                    android:textSize="15sp"
                    android:hint="@string/contact_name"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="7dp"
                    android:layout_gravity="top"
                    android:fontFamily="sans-serif"
                    android:focusableInTouchMode="false"
                    android:editable="false"

                    />

            </LinearLayout>
            <View
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ll_contact"
                android:background="#f0f0f0"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_below="@id/ll_contact"
                android:gravity="center"
                android:layout_marginTop="45dp"
                android:id="@+id/ll_phonebook"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_search"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_phonebook"
                    android:textSize="15sp"
                    android:hint="@string/phonebook"
                    android:background="@android:color/transparent"
                    android:layout_marginLeft="12dp"
                    android:focusableInTouchMode="false"
                    android:editable="false"

                    android:layout_gravity="top"
                    android:fontFamily="sans-serif"

                    />

            </LinearLayout>
            <View
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/ll_phonebook"
                android:background="#f0f0f0"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:paddingLeft="20dp"
                android:paddingRight="25dp"
                android:layout_marginRight="60dp"
                android:layout_below="@id/ll_phonebook"
                android:gravity="center"
                android:layout_marginTop="35dp"
                android:background="@drawable/round_textview"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_explore"
                    android:layout_gravity="center"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_explore"
                    android:textSize="15sp"
                    android:paddingBottom="7dp"
                    android:paddingTop="7dp"
                    android:textColor="@color/white"
                   android:text="@string/explore"
                    android:layout_marginLeft="12dp"

                    android:layout_gravity="top"
                    android:fontFamily="sans-serif"

                    />
                </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
